# platform

./: .dockerignore  .env.backup  .env.bak  .env.cloudrun  .env.cloudrun.example  .env.example  .env.production.example  .gcloudignore  .gitignore  .secrets.baseline  .trivyignore  ACTION_PLAN_CHARTS_FIX.md  ADMIN_FONTES_COMPLETE_FIX_SUMMARY.md  ADMIN_FONTES_PAGE_FIX.md  ADMIN_PAGES_IMPLEMENTATION_COMPLETE.md  ANALYTICS_API_COMPLETE_REFERENCE.md  ANALYTICS_API_FIX.md  ANALYTICS_API_OPTION_B_IMPLEMENTATION.md  ANALYTICS_PAGES_IMPLEMENTATION_COMPLETE.md  ANALYTICS_SCHEMA_ANALYSIS.md  ANALYTICS_SCHEMA_REFACTORING_COMPLETE.md  ANALYTICS_SETUP.md  ANALYTICS_V2_FINAL_ARCHITECTURE.md  APPLY_BIGQUERY_FDW_MIGRATION.sql  ARCHITECTURE.md  ARQUITETURA_DIAGRAMA_2025-12-11.md  ARQUIVOS_RAG  ATENDENTE_CORE_JWT_FIX.md  AUTO_TRIGGER_IMPLEMENTATION_COMPLETE.md  BACKEND_DATA_QUALITY_FIX_COMPLETE.md  BIGQUERY_COLUMN_INVESTIGATION_COMMANDS.md  BIGQUERY_FDW_DEBUG_GUIDE.md  BIGQUERY_FDW_MIGRATION_COMPLETE.md  BIGQUERY_FDW_REVISED_ARCHITECTURE.md  BIGQUERY_TABLE_NOT_FOUND_DIAGNOSIS.md  BIGQUERY_VERIFICATION_COMMANDS.md  BIG_QUERY_ETL_FIX.md  CHANGES_SUMMARY_HARDCODING_REMOVAL.md  CHART_DATA_DEBUGGING_GUIDE.md  CHART_ISSUE_ROOT_CAUSE_FOUND.md  (+175 more)
apps/hitl_dashboard/: README.md  pyproject.toml
ferramentas/: README.md  anna_figma_content.md  anna_images_urls.txt  anna_site_content.json  anna_site_content_complete.json  batch_requests.py  batch_results.csv  debug.py  mensagens_teste.csv  monitor_kill_idle_connections.py  oauth_e2e_test.py  persona_rag_tests.py  pyproject.toml  site_extractor.py  test_google_tools.py  test_personas.csv  test_personas_batch.py  test_single.csv
ferramentas/anna_site/: FIGMA_MANUAL_SETUP.md  FIGMA_SPECS.md  css_extracted.json  css_layouts.json  design_system.json  figma_elements_menu.json  figma_layout_menu.json  layout_menu.json  layout_structure.json  styles_complete.json
ferramentas/anna_site/css/: contato-amm.css  css_obras-amm.css  css_site_global.css  index.css  linha-do-tempo-amm.css  linha_do_tempo_inline.css  master_a-master.css  menu-amm.css  obras_inline.css  sine_die_inline.css  sinedie-amm.css  textos-amm.css  textos-arte-anna-amm.css  textos_criticos_inline.css
ferramentas/anna_site/html/: contato.html  home.html  linha_do_tempo.html  menu.html  obras.html  sine_die.html  textos_arte_anna.html  textos_criticos.html
ferramentas/avaliador_old/: pyproject.toml
ferramentas/crawler/: crawler.py  f'{site_name}Docs.md  knowledge_base.md
ferramentas/e2e/: README.md  run_jwt_smoke.sh
ferramentas/evaluation_suite/: .env.example  Dockerfile  README.md  pyproject.toml  seed_all.py  supabase_add_server_defaults.sql
ferramentas/evaluation_suite/workflows/: README.md  __init__.py
ferramentas/seeds/: README.md  __init__.py  clients.py  run_seeds.py
ferramentas/seeds/knowledge/: marcos_eletricista.json  pixel_store.json  studio_j.json
ferramentas/spec-kit-generator/: iniciar_projeto.sh
libs/vizu_agent_framework/: pyproject.toml
libs/vizu_agent_framework/tests/: __init__.py  test_agent_framework.py
libs/vizu_auth/: README.md  pyproject.toml
libs/vizu_auth/tests/: __init__.py  conftest.py  test_jwt_decoder.py  test_mcp_middleware.py  test_strategies.py
libs/vizu_context_service/: pyproject.toml
libs/vizu_context_service/tests/: conftest.py
libs/vizu_data_connectors/: MIGRATION_COMPLETE.md  README.md  pyproject.toml
libs/vizu_db_connector/: README.md  alembic.ini  pyproject.toml  run_migrations.py
libs/vizu_db_connector/alembic/: env.py
libs/vizu_db_connector/tests/: conftest.py  import os.py  test_operations.py
libs/vizu_elicitation_service/: pyproject.toml
libs/vizu_elicitation_service/tests/: __init__.py  test_elicitation_service.py
libs/vizu_experiment_service/: pyproject.toml
libs/vizu_google_suite_client/: pyproject.toml
libs/vizu_hitl_service/: README.md  pyproject.toml
libs/vizu_llm_client/: pyproject.toml
libs/vizu_llm_service/: README.md  pyproject.toml
libs/vizu_llm_service/tests/: test_client.py  test_integration_pipeline.py  test_sanitizer.py  test_text_to_sql.py  test_text_to_sql_config.py
libs/vizu_mcp_commons/: pyproject.toml
libs/vizu_mcp_commons/tests/: test_mcp_commons.py
libs/vizu_models/: README.md  pyproject.toml
libs/vizu_observability_bootstrap/: README.md  pyproject.toml
libs/vizu_parsers/: README.md  pyproject.toml
libs/vizu_prompt_management/: README.md  pyproject.toml
libs/vizu_prompt_management/tests/: test_prompt_builder.py  test_prompt_management.py
libs/vizu_qdrant_client/: README.md  pyproject.toml
libs/vizu_qdrant_client/qdrant_storage/: raft_state.json
libs/vizu_qdrant_client/tests/: conftest.py  test_client.py
libs/vizu_rag_factory/: README.md  pyproject.toml
libs/vizu_rag_factory/tests/: conftest.py
libs/vizu_shared_models/: README.md  pyproject.toml
libs/vizu_shared_models/tests/: test_model.py
libs/vizu_shared_utils/: .coverage  pyproject.toml
libs/vizu_shared_utils/tests/: test_data_transformers.py  test_text_utils.py
libs/vizu_sql_factory/: allowlist_validator.py  monitoring_config.py  performance_monitor.py  pyproject.toml  schema_snapshot.py
libs/vizu_sql_factory/tests/: __init__.py  conftest.py  test_allowlist.py  test_e2e_pipeline.py  test_exemplar_validator.py  test_schema_snapshot.py  test_validator.py  test_validator_exemplars.py
libs/vizu_supabase_client/: README.md  pyproject.toml
libs/vizu_supabase_client/tests/: conftest.py  test_auth_context.py  test_client.py  test_postgrest_executor.py
libs/vizu_tool_registry/: README.md  pyproject.toml
libs/vizu_tool_registry/tests/: test_registry.py  test_sql_tool.py  (+1 more)
libs/vizu_twilio_client/: .env.example  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  pyproject.toml
services/analytics_api/: Dockerfile  PYDANTIC_OBJECTS_REFERENCE.md  README.md  analytics_v2_dim_customer_export.csv  analytics_v2_dim_product_export.csv  analytics_v2_dim_supplier_export.csv  dockerfile.yml  entrypoint.sh  pyproject.toml
services/atendente_api/: .env.example  Dockerfile  README.md  pyproject.toml
(+1100 files in other folders)
