[tool.poetry]
name = "vizu-dev-tools"
version = "0.1.0"
description = "Ambiente de ferramentas de desenvolvimento para o monorepo Vizu."
authors = ["Lucas Cid <lucas@vizubr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# A dependência do google-gemini-cli foi removida daqui.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"