[tool.poetry]
name = "vizu-evaluation-suite"
version = "0.1.0"
description = "Suíte de avaliação para as APIs da Vizu, para testar prompts, modelos e lógicas de negócio."
authors = ["Lucas Cid <lucas@vizubr.com>"]
readme = "README.md"
packages = [{include = "evaluation_suite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
pandas = "^2.1.0"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
vizu_db_connector = {path = "../../libs/vizu_db_connector", develop = true}
vizu_shared_models = {path = "../../libs/vizu_shared_models", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-httpx = "^0.29.0"
ruff = "^0.1.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ATUALIZADO: Configuração padronizada, igual à clients_api
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "src",
  "../../libs"
]
testpaths = [
    "tests",
]