[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vizu_auth"
version = "0.1.0"
description = "Centralized authentication library for Vizu services (JWT + API-Key)"
authors = ["Vizu Team"]
readme = "README.md"
packages = [{include = "vizu_auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.8.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.6.0"

# Optional FastAPI integration
fastapi = {version = "^0.100.0", optional = true}

[tool.poetry.extras]
fastapi = ["fastapi"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
httpx = "^0.28.1"
fastmcp = "^2.11.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
