[tool.poetry]
name = "vizu_context_service"
version = "0.1.0"
description = "Lib agnóstica para prover contexto de cliente (DB) e cache (Redis)"
authors = ["Lucas Cid <lucas@vizubr.com>"]
readme = "README.md"
packages = [{include = "vizu_context_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Dependências de produção (serão preenchidas com base no código movido)
redis = "^5.0.0"
# Dependências locais
vizu_db_connector = {path = "../../libs/vizu_db_connector", develop = true}
vizu_models = {path = "../../libs/vizu_models", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0" # Para testes de dependências FastAPI

# Configuração de PYTHONPATH para testes (conforme Manual de Boas Práticas Vizu Deploy)
[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../../libs"
]
