[tool.poetry]
name = "vizu-data-connectors"
version = "0.1.0"
description = "Shared data connectors for Vizu data ingestion (BigQuery, E-commerce platforms, etc.)"
authors = ["Vizu Engineering Team"]
packages = [{include = "vizu_data_connectors", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# === HTTP CLIENT (for e-commerce) ===
httpx = "^0.27.0"

# === DATA PROCESSING ===
# Pin to compatible versions to avoid bloat
numpy = ">=1.26.0,<2.0.0"
pandas = ">=2.2.0,<2.3.0"
pyarrow = ">=13.0.0,<14.0.0"

# === GOOGLE CLOUD (optional extras) ===
google-cloud-bigquery = {version = "^3.21.0", optional = true}
google-auth = {version = "^2.29.0", optional = true}
db-dtypes = {version = "^1.2.0", optional = true}

[tool.poetry.extras]
# Install only what you need
bigquery = ["google-cloud-bigquery", "google-auth", "db-dtypes"]
ecommerce = []  # Only needs httpx (already in main deps)
all = ["google-cloud-bigquery", "google-auth", "db-dtypes"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
