[tool.poetry]
name = "vizu-db-connector"
version = "0.1.0"
description = "Conector de banco de dados padronizado para o ecossistema Vizu."
authors = ["Equipe Vizu <infra@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_db_connector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
vizu-shared-models = {path = "../vizu_shared_models", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]