[tool.poetry]
name = "vizu-db-connector"
version = "0.1.0"
description = "Lib central de banco de dados e migrações do Vizu"
authors = ["Seu Nome <seu@email.com>"]
packages = [{include = "vizu_db_connector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
supabase = "^2.3.0"  # Necessário para o client Supabase
pyjwt = "^2.8.0"     # Necessário para gerar tokens RLS
python-dotenv = "^1.2.1"
sqlmodel = "^0.0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

# --- ADICIONE ESTA SEÇÃO ---
[tool.poetry.scripts]
vizu-db = "vizu_db_connector.manager:main"
# ---------------------------

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"