[tool.poetry]
name = "vizu-db-connector"
version = "0.1.0"
description = "Lib central de banco de dados e migrações do Vizu"
authors = ["Vizu Team"]
packages = [{include = "vizu_db_connector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.27"
# pandas is optional - only needed for insert_dataframe
pandas = {version = "^2.0", optional = true}

[tool.poetry.extras]
dataframe = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pandas = "^2.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
vizu-db = "vizu_db_connector.manager:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"