[tool.poetry]
name = "vizu-experiment-service"
version = "0.1.0"
description = "Experiment orchestration service for dataset generation and evaluation"
authors = ["Vizu <dev@vizubr.com>"]
readme = "README.md"
packages = [{include = "vizu_experiment_service", from = "src"}]

[tool.poetry.scripts]
experiment = "vizu_experiment_service.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
pyyaml = "^6.0"
sqlmodel = "^0.0.27"
asyncpg = "^0.29.0"
vizu-models = {path = "../vizu_models", develop = true}
# vizu-hitl-service = {path = "../vizu_hitl_service", develop = true}  # TODO: create if needed
vizu-db-connector = {path = "../vizu_db_connector", develop = true}
langfuse = "^2.0"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
