[tool.poetry]
name = "vizu-hitl-service"
version = "0.1.0"
description = "Human-in-the-Loop service for dataset creation and quality assurance"
authors = ["Vizu <dev@vizu.com.br>"]
readme = "README.md"
packages = [{include = "vizu_hitl_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
pydantic = "^2.0.0"
vizu-models = {path = "../vizu_models", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
fakeredis = "^2.21.0"
ruff = "^0.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
