[tool.poetry]
name = "vizu-llm-client"
version = "0.1.0"
description = "Biblioteca central da Vizu para interação agnóstica com provedores de LLM."
authors = ["Vizu Engineering <eng@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_llm_client", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pydantic-settings = "^2.3.4"
langchain-core = "^0.2.10"
# Adicionar provedores conforme necessário
langchain-openai = "^0.1.9"
langchain-google-vertexai = "^1.0.4"
# langchain-anthropic = "..."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"