[tool.poetry]
name = "vizu-llm-service"
version = "0.1.0"
description = "Cliente leve para serviços de LLM e Embeddings da Vizu"
authors = ["Vizu DevOps <devops@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_llm_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Mantemos langchain-community para o ChatOllama
langchain-community = "^0.3.0"
# Mantemos langchain-core para as interfaces base
langchain-core = "^1.0.0"
# Adicionamos requests para chamar a API de embedding
requests = "^2.31.0"
langfuse = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"