[tool.poetry]
name = "vizu-observability-bootstrap"
version = "0.1.0"
description = "Biblioteca centralizada para configurar observabilidade (logs e traces) nos serviços da Vizu."
authors = ["Vizu DevOps <devops@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_observability_bootstrap", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# === Bloco OpenTelemetry ALINHADO E COMPATÍVEL ===
# Usando as versões estáveis mais recentes que funcionam em conjunto.
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
# ===============================================

python-json-logger = "^2.0.7"
# Atualizado para a versão mais recente para garantir compatibilidade
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"