[tool.poetry]
name = "vizu-observability-bootstrap"
version = "0.2.0"
description = "Unified observability for Vizu services: OTLP (traces, logs, metrics) + Langfuse (LLM tracing)"
authors = ["Vizu DevOps <devops@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_observability_bootstrap", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# === OpenTelemetry Core ===
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
opentelemetry-instrumentation-fastapi = "^0.59b0"
opentelemetry-exporter-otlp = "^1.38.0"

# === Logging ===
python-json-logger = "^2.0.7"

# === Langfuse (LLM Observability) ===
# v3 OTEL-native with ClickHouse backend
langfuse = ">=3.0.0"
langchain-core = ">=0.3.0"  # For callback types

# === Web Framework ===
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"