[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vizu_prompt_management"
version = "0.1.0"
description = "Centralized prompt management for Vizu services - versioning, templates, and MCP integration"
authors = ["Vizu Team"]
readme = "README.md"
packages = [{include = "vizu_prompt_management", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
jinja2 = "^3.1.0"

# Vizu dependencies
vizu_models = {path = "../vizu_models", develop = true}
vizu_db_connector = {path = "../vizu_db_connector", develop = true}

# Optional MCP integration
fastmcp = {version = "^2.11.0", optional = true}

[tool.poetry.extras]
mcp = ["fastmcp"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
