[tool.poetry]
name = "vizu-qdrant-client"
version = "0.1.0"
description = "Cliente padronizado para Qdrant no ecossistema Vizu."
authors = ["Equipe Vizu <infra@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_qdrant_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
qdrant-client = "^1.9.2"
pydantic-settings = "^2.3.4"
langchain-qdrant = ">=0.2.0"
langchain-core = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]