[tool.poetry]
name = "vizu_rag_factory"
version = "0.1.0"
description = "Factory para criar RAG runnables/tools da Vizu"
authors = ["Lucas Cid <lucas@vizubr.com>"]
readme = "README.md"
packages = [{include = "vizu_rag_factory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# --- DEFINIÇÕES ATUALIZADAS E CORRIGIDAS ---
# Esta lib usa os componentes 'core' do LangChain
# Usa >=0.3.0 para compatibilidade com outras libs do monorepo
langchain-core = ">=0.3.0"
# (langchain e langchain-openai removidos)

# Cross-encoder reranker
sentence-transformers = ">=3.0.0"

# Dependências locais
vizu_llm_service = {path = "../../libs/vizu_llm_service", develop = true}
vizu_context_service = {path = "../../libs/vizu_context_service", develop = true}
vizu_models = {path = "../../libs/vizu_models", develop = true}
vizu_prompt_management = {path = "../../libs/vizu_prompt_management", develop = true}
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

# Configuração de PYTHONPATH para testes
ruff = "^0.14.7"
[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../../libs"
]