[tool.poetry]
name = "vizu-shared-models"
version = "0.1.0"
description = "Modelos de dados Pydantic compartilhados para o ecossistema Vizu."
authors = ["Equipe Vizu <infra@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_shared_models", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pydantic = {extras = ["email"], version = "^2.8.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]