[tool.poetry]
name = "vizu-twilio-client"
version = "0.1.0"
description = "Twilio client library for conversation management, messaging, and phone number operations"
authors = ["Vizu DevOps <devops@vizu.ai>"]
readme = "README.md"
packages = [{include = "vizu_twilio_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
twilio = "^9.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
ruff = "^0.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
