[tool.poetry]
name = "atendente-api"
version = "0.1.0"
description = "Microserviço responsável pela lógica do Atendente Virtual Inteligente da Vizu."
authors = ["Vizu Engineering <eng@vizu.ai>"]
readme = "README.md"
packages = [{include = "atendente_api", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
langchain = "^0.2.6"
langchain-community = "^0.2.7" # <-- DEPENDÊNCIA ADICIONADA AQUI
langgraph = "^0.1.1"
langchain-openai = "^0.1.9"
redis = "^5.0.7"
twilio = "^9.1.1"
python-multipart = "^0.0.9"
langchain-qdrant = "^0.1.1"

# --- Dependências locais do monorepo Vizu ---
vizu-db-connector = {path = "../../libs/vizu_db_connector", develop = true}
vizu-qdrant-client = {path = "../../libs/vizu_qdrant_client", develop = true}
vizu-shared-models = {path = "../../libs/vizu_shared_models", develop = true}
vizu-llm-service = {path = "../../libs/vizu_llm_service", develop = true}

# --- Dependências de Desenvolvimento ---
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
black = "^24.4.2"
mypy = "^1.10.0"
fakeredis = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Configuração das Ferramentas de Qualidade ---
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

# --- Configuração Específica para o Pytest (A PEÇA FALTANTE) ---
[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "integration: marca para testes de integração",
]